--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"cloudinary": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"mongodb": "^6.9.0",
-		"streamifier": "^0.1.1"
+		"streamifier": "^0.1.1",
+		"svelte-icons": "^2.1.0"
 	}
 }
