--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"dayjs": "^1.11.13",
 		"mongodb": "^6.9.0",
 		"streamifier": "^0.1.1",
-		"svelte-icons": "^2.1.0"
+		"svelte-icons": "^2.1.0",
+		"svelte-vertical-timeline": "^1.0.2"
 	}
 }
