--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@types/streamifier": "^0.1.2",
 		"cloudinary": "^2.5.1",
 		"dayjs": "^1.11.13",
