--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"cloudinary": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"mongodb": "^6.9.0",
+		"sharp": "^0.33.5",
 		"streamifier": "^0.1.1",
 		"svelte-carousel": "github:vadimkorr/svelte-carousel#pull/142/head",
 		"svelte-icons": "^2.1.0",
