--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@types/streamifier": "^0.1.2",
+		"@vercel/analytics": "^1.4.1",
 		"cloudinary": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"mongodb": "^6.9.0",
