--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^3.2.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"svelte-confetti": "^1.0.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
