--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fireworks-js/svelte": "^2.10.8",
 		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@types/streamifier": "^0.1.2",
 		"@vercel/analytics": "^1.4.1",
