--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"cloudinary": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"gsap": "^3.13.0",
+		"leaflet": "^1.9.4",
 		"mongodb": "^6.9.0",
 		"sharp": "^0.33.5",
 		"streamifier": "^0.1.1",
